add registration form logic

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>Hi</h1>
+<div *ngIf="!user">
+  Форма — это сервис для создания сложных опросов. Чтобы узнать больше, нужно создать аккаунт или залогиниться.
+</div>
+<!--<app-alert></app-alert>-->
 <router-outlet></router-outlet>
