--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<p>Hi! Login works.</p>
+<p>Форма — это простой сервис для создания сложных опросов. Форма помогает создавать, проводить и анализировать результаты опросов.</p>
+<p>Проектируя Форму, мы ориентировались на потребности исследователей и маркетологов, поэтому постарались сделать так, чтобы с Формой было особенно удобно работать с опросами со сложной логикой. </p>
+<button
+  class="p-2 bg-purple-100 font-monsterrat rounded-xs"
+  (click)="logout()">
+  Logout
+</button>
