--- a/frontend/src/app/shared/topbar/topbar.component.html
+++ b/frontend/src/app/shared/topbar/topbar.component.html
@@ -1,1 +1,10 @@
-<p>topbar works!</p>
+<div class="topnav">
+  <div class="topnav__product">
+  <a class="active" href="#">Home</a>
+  <a href="#">News</a>
+  </div>
+  <div class="topnav__user">
+  <a href="#">Contact</a>
+  <a href="#">About</a>
+  </div>
+</div>
