--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div *ngIf="!user">
-  Форма — это сервис для создания сложных опросов. Чтобы узнать больше, нужно создать аккаунт или залогиниться.
+<div class="main-container">
+  <app-topbar></app-topbar>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 <!--<app-alert></app-alert>-->
-<router-outlet></router-outlet>
