--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="main-container">
   <app-topbar></app-topbar>
-  <div class="content">
+  <div class="main">
     <router-outlet></router-outlet>
   </div>
-</div>
 <!--<app-alert></app-alert>-->
