--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,6 +1,11 @@
-.main-container {
+@import '/src/styles.scss';
+
+html {
+  min-height: 100%;/* make sure it is at least as tall as the viewport */
   position: relative;
 }
-.content {
-  padding-top: 56px;
+
+.main {
+  margin: 36px;
+  width: 100%;
 }
