--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -1,10 +1,14 @@
+@import 'src/styles';
+
 .signin-form__container {
-  background-color: rgba(31, 41, 55);
-  height: 100vh;
+  background-color: $ivory-1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding-bottom: 2rem;
-
+  height: 100vh;
+  width: 100vw;
 }
 .signin-form {
   display: flex;
@@ -12,30 +16,36 @@
   align-items: center;
   justify-content: center;
   border-radius: 8px;
-  width: 28rem;
+  width: 25rem;
   padding: 2rem 1.5rem;
   margin: 0 auto;
 }
 
 .signin-form__header {
-  color: #d2d5da;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  font-size: 42px;
-  margin-bottom: 32px;
-  letter-spacing: 2px;
+  color: $navy;
+  font-family: $mnt;
+  font-weight: 500;
+  font-size: 22px;
+  margin-bottom: 14px;
+  //letter-spacing: 2px;
 }
 
 .signin-form__input {
-  font-family: 'PT Sans', sans-serif;
-  font-size: 24px;
-  color: #d2d5da;
-  background-color: #394150;
   width: 100%;
-  border-radius: 8px;
-  margin-bottom: 16px;
-  padding: 16px;
+  background-color: $ivory-1;
+  font-family: $pt;
+  font-size: 20px;
   border: none;
+  outline: 1px solid #212221;
+  border-radius: 2px;
+  color: $navy;
+  margin-bottom: 10px;
+  padding: 8px;
+
+  &:active,
+  &:hover {
+    outline: 2px solid #212221;
+  }
 
   ::placeholder {
     color: #9ca3ad;
@@ -44,16 +54,28 @@
 
 .signin-form__button {
   margin-top: 1rem;
-  background-color: rgba(29, 78, 216);
-  color: rgba(229, 231, 235);
+  background-color: $ivory-1;
+  color: $navy;
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 24px;
-  letter-spacing: 1px;
-  max-width: 28rem;
-  font-weight: 700;
-  padding: 1rem 2rem;
-  border-radius: 8px;
+  font-family: $mnt;
+  font-weight: 500;
+  font-size: 20px;
+  width: 100%;
+  padding: 8px;
+  border: solid 1px $navy;
+  border-radius: 4px;
+  cursor: pointer;
+
+  &:hover {
+    border-collapse: collapse;
+    border: solid 1px $navy;
+    transition: all 0.01s ease-in;
+    box-shadow: inset 0 0 0 22px black;
+    opacity: 1;
+    color: $ivory-1;
+
+
+  }
 }
 
 .d-flex {
@@ -65,11 +87,21 @@
 
 .signin-form__warning {
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: $mnt;
   font-size: 16px;
   font-weight: 500;
-  color: rgba(209, 213, 219);
+  color: $navy;
   margin-top: 2rem;
+
+  a {
+    color: $navy;
+    text-decoration: none;
+    border-bottom: 1px solid $navy;
+
+    &:hover {
+      border-bottom: 2px solid $navy;
+    }
+  }
 }
 
 .signin-form__content {
