--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,31 +1,8 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-/* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&family=PT+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+@import 'assets/global/reset';
+@import 'assets/global/reduce-motion';
+@import 'assets/global/typography';
+@import 'assets/global/variables';
 
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+* {
+  background-color: $ivory-1;
 }
-
-.m-auto {
-  margin: 0 auto;
-}
-
-.row {
-  flex-direction: row;
-}
-
-.col {
-  flex-direction: column;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
