--- a/frontend/src/assets/global/reduce-motion.scss
+++ b/frontend/src/assets/global/reduce-motion.scss
@@ -4,12 +4,12 @@
   *,
   ::before,
   ::after {
-    animation-delay: -1ms !important; /* 1 */
-    animation-duration: 1ms !important; /* 1 */
-    animation-iteration-count: 1 !important; /* 1 */
-    background-attachment: initial !important; /* 2 */
-    scroll-behavior: auto !important; /* 3 */
-    transition-delay: 0s !important; /* 4 */
-    transition-duration: 0s !important; /* 4 */
+    animation-delay: -1ms !important;
+    animation-duration: 1ms !important;
+    animation-iteration-count: 1 !important;
+    background-attachment: initial !important;
+    scroll-behavior: auto !important;
+    transition-delay: 0s !important;
+    transition-duration: 0s !important;
   }
 }
