add linters and format code

--- a/frontend/src/app/auth/components/signup/signup.component.html
+++ b/frontend/src/app/auth/components/signup/signup.component.html
@@ -8,7 +8,8 @@
         id="firstName"
         name="firstName"
         placeholder="Имя"
-        type="text"/>
+        type="text"
+      />
 
       <input
         class="signin-form__input"
@@ -16,7 +17,8 @@
         id="lastName"
         name="lastName"
         placeholder="Фамилия"
-        type="text"/>
+        type="text"
+      />
 
       <input
         class="signin-form__input"
@@ -24,7 +26,8 @@
         id="email"
         name="email"
         placeholder="Почта"
-        type="text"/>
+        type="text"
+      />
 
       <input
         class="signin-form__input"
@@ -32,17 +35,27 @@
         id="password"
         name="password"
         placeholder="Пароль"
-        type="password"/>
+        type="password"
+      />
 
       <button
-        class="signin-form__button hover:bg-blue-400 hover:text-gray-800 focus:outline-none my-1"
+        class="
+          signin-form__button
+          hover:bg-blue-400 hover:text-gray-800
+          focus:outline-none
+          my-1
+        "
         type="submit"
-      >Создать аккаунт
+      >
+        Создать аккаунт
       </button>
 
       <div class="signin-form__warning text-sm text-gray-400 mt-4">
         Создавая аккаунт вы соглашетесь с нашей
-        <a class="no-underline border-b border-grey-dark text-gray-400" href="#">
+        <a
+          class="no-underline border-b border-grey-dark text-gray-400"
+          href="#"
+        >
           Политикой в отношении обработки персональных данных
         </a>
       </div>
@@ -51,7 +64,10 @@
 
   <div class="signin-form__warning">
     Уже создавали аккаунт раньше?
-    <a class="no-underline border-b border-blue hover:text-blue-400" routerLink="/auth/login">
+    <a
+      class="no-underline border-b border-blue hover:text-blue-400"
+      routerLink="/auth/login"
+    >
       Войти
     </a>
   </div>
