--- a/frontend/src/app/form/form-create/form-create.component.html
+++ b/frontend/src/app/form/form-create/form-create.component.html
@@ -4,14 +4,16 @@
     <form
       class="d-flex create-form__content"
       [formGroup]="form"
-      (ngSubmit)="createForm()">
+      (ngSubmit)="createForm()"
+    >
       <input
         type="text"
         id="title"
         formControlName="title"
         class="create-form__input"
         name="email"
-        placeholder="Название"/>
+        placeholder="Название"
+      />
 
       <input
         type="text"
@@ -19,7 +21,8 @@
         formControlName="slug"
         class="create-form__input"
         name="slug"
-        placeholder="slug"/>
+        placeholder="slug"
+      />
 
       <input
         type="text"
@@ -27,13 +30,10 @@
         formControlName="description"
         class="create-form__input"
         name="description"
-        placeholder="description"/>
+        placeholder="description"
+      />
 
-      <button
-        type="submit"
-        class="create-form__button">
-        Create
-      </button>
+      <button type="submit" class="create-form__button">Create</button>
     </form>
   </div>
 </div>
